# wasm-bindgen-webassembly-global-test-case

./: Cargo.toml  flake.nix
src/: lib.rs
