[package]
authors = ["Chris Joel"]
edition = "2021"
name = "wasm-bindgen-webassembly-global-test-case"
publish = false
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "=0.3.72"
web-sys = "=0.3.72"
wasm-bindgen = { version = "=0.2.95" }
wasm-bindgen-test = { version = "0.3.45" }

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
codegen-units = 1
